--- a/expenseTracker/public/style.css
+++ b/expenseTracker/public/style.css
@@ -1,5 +1,11 @@
 body {
-    background-color: bisque;
+    background-image: url("../finpic.png");
+    background-size: cover;
+     background-position:center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     text-align: center;
     margin-top: 50px;
 }
